[FIX] {sale_}project,hr_timesheet: fix project form CSS
This commit fixes some css issues in the "Settings" tab
of the project form view. The settings descriptions were
wrapping at half the width they were supposed to, and
the settings were misaligned compared to the sections titles.

Enterprise: https://github.com/odoo/enterprise/pull/32359

--- a/addons/project/static/src/css/project.css
+++ b/addons/project/static/src/css/project.css
@@ -8,3 +8,7 @@
   margin-top:2px;
   margin-right: 6px;
 }
+
+.o_form_project_project  .o_setting_box {
+  margin-left: 1.5rem;
+}
